fix(smartphones): change the nav menu gaps

--- a/css/main.css
+++ b/css/main.css
@@ -811,7 +811,7 @@ h4 {
         justify-content: space-around;
   }
   #header .navbar .navbar-content .menu a {
-    padding: 0 0.3rem;
+    padding: 0 0.5rem;
   }
   #slider .wrapper .slider-text {
     width: 100%;
