--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -93,7 +93,7 @@
           display: flex;
           justify-content: space-around;
           a {
-            padding: 0 0.3rem;
+            padding: 0 0.5rem;
           }
         }
       }
